2006-02-01  Jean-Louis Martineau <martineau@zmanda.com>
	* restore-src/restore.c: Use OFF_T_FMT to printf off_t variable,
	  cast size_t to am64_t and use AM64_FMT to printf them.

2006-01-31  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/driver.c (dumper_result): Reset sched(dp)->attempted to 0
	  before adding it to tapeq.

2006-01-27  Ian Turner <ian@zmanda.com>
	* configure.in: Add new option --without-xsltproc (and
	  --with-xsltproc), which turns off (or forces) the use of xsltproc to
	  build manpages. Thanks to Paul Bijnens
	  <pbijnens@users.sourceforge.net> for suggesting this feature.

2006-01-27  Ian Turner <ian@zmanda.com>
	* restore-src/amfetchdump.c: Properly clean up logfiles. Also, 
	  run as user amanda even if we are started as some other user.
	  Thanks to Paul Bijnens <pbijnens@users.sourceforge.net> for the 
	  patch.

2006-01-25  Paddy Sreenivasan <paddy@zmanda.com>
        * common-src/amanda.h:     Removed unnecessary header include files.

2006-01-25  Kevin Till<ktill@zmanda.com>
	* server-src/amadmin.c:	fix for sourceforge bug 1412698
				add missing parameters to "amadmin x disklist"
	* server-src/amstatus.pl.in: untaint user input, enforce known path.
	* server-src/amoverview.pl.in: untaint user input (bug 1353481)

2006-01-25  Kevin Till<ktill@zmanda.com>
	* man/xml-source/amanda.conf.5.xml: fix formatting (<para> is not compatible with some tag)
					    add supported auth types.

2006-01-25  Kevin Till<ktill@zmanda.com>
	* common-src/bsd-security.c: move check_security to bsd_security.c, 
                                     fix faulty return
				     Thanks to Paul Bijnens
	* restore-src/amidxtaped.c:  ditto
	* server-src/amindexd.c:     ditto and no need to tell client 
                                     about reason for denial
	* common-src/amanda.h:       add proto of check_security
	* server-src/conffile.c:     don't list CRYPT in the summary report 
                                     for now